src/test/ui/where-clauses/where-clauses-method-unsatisfied.stderr
error[E0277]: the trait bound `Bar: std::cmp::Eq` is not satisfied
  --> $DIR/where-clauses-method-unsatisfied.rs:18:7
   |
LL |     x.equals(&x);
   |       ^^^^^^ the trait `std::cmp::Eq` is not implemented for `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
